# jboss-jdg-quickstarts

./: .gitignore  .travis.yml  README.md  pom.xml  repositories-backup.xml  settings.xml
caching-service/: README.md  dependency-reduced-pom.xml  pom.xml
camel-infinispan-eap-quickstart/: README.md  pom.xml  sample-input-file.txt
camel-jbossdatagrid-fuse/: README.md  best-footballplayers-2015.csv  index.html  pom.xml  setupEverythingOnFuse.sh
carmart/: README-tomcat.md  README.md  pom.xml
carmart-transactional/: README-tomcat.md  README.md  pom.xml
carmart-tx/: README-tomcat.md  README.md  pom.xml
cdi/: README.md  pom.xml
cdi-jdg/: README.md  pom.xml
eap-cluster-app/: README.md  build.bat  build.sh  deploy-domain.cli  install-appOne-standalone.cli  install-domain.cli  pom.xml  undeploy-domain.cli
eap-datagrid-subsystem/: README.md  install1-standalone-clustered.cli  install1-standalone-local.cli  install2-standalone-clustered.cli  install2-standalone-local.cli  pom.xml  prepareTwoEAP.sh
embedded-openshift/: README.md  pom.xml
hadoop/: README.md  pom.xml
helloworld-jdg/: README.md  pom.xml
hotrod-endpoint/: README.md  pom.xml
hotrod-endpoint-js/: README.md  football-manager.js  package.json
hotrod-secured/: README.md  pom.xml
hotrod-transactions/: README.md  pom.xml
memcached-endpoint/: README.md  pom.xml
openshift/: .gitignore  README.md  TODO.md  registry-credentials-setup.sh  registry-credentials-validate.sh  setup-minishift.sh  (+1 more)
remote-query/src/main/cpp/: CMakeLists.txt  README.md
remote-query/src/main/cpp/include/: Marshalling.h
remote-query/src/main/cpp/src/: Marshalling.cpp  addressbook.proto  main.cpp  message-wrapping.proto  primitive.proto
(+359 files in other folders)
